--- a/aboutUs.html
+++ b/aboutUs.html
@@ -16,7 +16,7 @@
 
 	<!-- Header -->
 	<header id="header">
-		<a class="logo" href="index.html">Industrious</a>
+		<a class="logo" href="index.html">Punjab Steels</a>
 		<nav>
 			<a href="#menu">Menu</a>
 		</nav>
