--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 	<!-- Header -->
 	<header id="header">
-		<a class="logo" href="index.html">Punjab steels</a>
+		<a class="logo" href="index.html">Punjab Steels</a>
 		<nav>
 			<a href="#menu">Menu</a>
 		</nav>
