--- a/aboutUs.html
+++ b/aboutUs.html
@@ -43,22 +43,8 @@
 				<header>
 					<h2>About Us</h2>
 				</header>
-				<p>Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod.
-					Magna et cursus lorem faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac
-					adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget.
-					tempus euismod tempus. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu
-					felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent
-					tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum.
-					Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac sed amet
-					praesent. Nunc lacinia ante nunc ac gravida lorem ipsum dolor sit amet dolor feugiat consequat. </p>
-				<p>Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod.
-					Magna et cursus lorem faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac
-					adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget.
-					tempus euismod tempus. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu
-					felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent
-					tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum.
-					Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac sed amet
-					praesent. Nunc lacinia ante nunc ac gravida lorem ipsum dolor sit amet dolor feugiat consequat. </p>
+				<p>Punjab steels started in 2001 in village tooran near Mandi gobindgarh-147301. </p>
+				<p> we are Manufacturers of TMT Bars, rounds, Angle, Channels</p>
 				<!-- <hr />
 					<h3>Magna odio tempus commodo</h3>
 					<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor. Ante commodo blandit adipiscing integer semper orci eget. Faucibus commodo adipiscing mi eu nullam accumsan morbi arcu ornare odio mi adipiscing nascetur lacus ac interdum morbi accumsan vis mi accumsan ac praesent.</p>
@@ -82,21 +68,34 @@
 					</p>
 				</section>
 				<section>
-					<h4>Mail us</h4>
+					<h4>Contact Us</h4>
 					<ul class="alt">
-						<li><a href="mailto:xyz@gmail.com">xyz@gmail.com</a></li>
-						<li><a href="mailto:xyz@gmail.com">xyz@gmail.com</a></li>
+						<li><a href="mailto:cpseema@yahoo.co.in">cpseema@yahoo.co.in</a></li>
+						<li><a href="#">98140-26216</a></li>
+						<li><a href="#">01765-500216</a></li>
+						<li><a href="#">01765-254213</a></li>
+						<li><a href="#">01765-258213</a></li>
 						<!-- <li><a href="#">Felis enim feugiat viverra.</a></li>
-							<li><a href="#">Dolor pulvinar magna etiam.</a></li> -->
+								<li><a href="#">Dolor pulvinar magna etiam.</a></li> -->
 					</ul>
 				</section>
 				<section>
-					<h4>Our social media</h4>
+					<h4>Other details</h4>
 					<ul class="plain">
-						<li><a href="#"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
-						<li><a href="#"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
+						<li title="GST no."><a href="#"><i title="GST no." class="icon fa-info-circle">&nbsp;</i>
+								GST- 03AAEFP1241Q1Z9</a>
+						</li>
+						<li title="Pan no."><a href="#"><i class="icon fa-info-circle">&nbsp;</i>PAN- AAEFP1241Q</a>
+						</li>
 						<!-- <li><a href="#"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li> -->
 						<!-- <li><a href="#"><i class="icon fa-github">&nbsp;</i>Github</a></li> -->
+					</ul>
+
+					<h4>Our Location</h4>
+					<ul class="plain">
+						<li title="location"><a href="#"><i class="icon fa-location-arrow">&nbsp;</i>
+								Vill. Tooran, Amloh Road, Mandi Gobindgarh-147301</a>
+						</li>
 					</ul>
 				</section>
 			</div>
