--- a/index.html
+++ b/index.html
@@ -60,30 +60,31 @@
 				<section>
 					<div class="content">
 						<header>
-							<a href="#" class="icon fa-floppy-o"><span class="label">Icon</span></a>
-							<h3>Downloads</h3>
+							<a href="download/EC.pdf" class="icon fa-floppy-o"><span class="label">Icon</span></a>
+							<h3>SEIAA Approval</h3>
 						</header>
-						<p>To download various reports click above icon.</p>
+						<p>To download SEIAA Approval reports click above icon.</p>
 					</div>
 				</section>
 				<section>
 					<div class="content">
 						<header>
-							<a href="#" class="icon fa-line-chart"><span class="label">Icon</span></a>
-							<h3>Annual reports</h3>
+							<a href="download/publicNotice.pdf"" class=" icon fa-sticky-note"><span
+									class="label">Icon</span></a>
+							<h3>Public Notice</h3>
 						</header>
-						<p>To download Annual report click above icon.</p>
+						<p>To download Public Notice click above icon.</p>
 					</div>
 				</section>
 				<section>
 					<div class="content">
 						<header>
-							<a href="mailto:xyz@gmail.com" class="icon fa-paper-plane-o"><span
+							<a href="mailto:cpseema@yahoo.co.in" class="icon fa-paper-plane-o"><span
 									class="label">Icon</span></a>
 							<h3>Send email</h3>
 						</header>
-						<p>For any further query please send us email at <a href="mailto:xyz@gmail.com">
-								xyz@gmail.com</a></p>
+						<p>For any further query please send us email at <a href="mailto:cpseema@yahoo.co.in">
+								cpseema@yahoo.co.in</a></p>
 					</div>
 				</section>
 				<section>
@@ -183,21 +184,34 @@
 					</p>
 				</section>
 				<section>
-					<h4>Mail us</h4>
+					<h4>Contact Us</h4>
 					<ul class="alt">
-						<li><a href="mailto:xyz@gmail.com">xyz@gmail.com</a></li>
-						<li><a href="mailto:xyz@gmail.com">xyz@gmail.com</a></li>
+						<li><a href="mailto:cpseema@yahoo.co.in">cpseema@yahoo.co.in</a></li>
+						<li><a href="#">98140-26216</a></li>
+						<li><a href="#">01765-500216</a></li>
+						<li><a href="#">01765-254213</a></li>
+						<li><a href="#">01765-258213</a></li>
 						<!-- <li><a href="#">Felis enim feugiat viverra.</a></li>
 								<li><a href="#">Dolor pulvinar magna etiam.</a></li> -->
 					</ul>
 				</section>
 				<section>
-					<h4>Our social media</h4>
+					<h4>Other details</h4>
 					<ul class="plain">
-						<li><a href="#"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
-						<li><a href="#"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
+						<li title="GST no."><a href="#"><i title="GST no." class="icon fa-info-circle">&nbsp;</i>
+								GST- 03AAEFP1241Q1Z9</a>
+						</li>
+						<li title="Pan no."><a href="#"><i class="icon fa-info-circle">&nbsp;</i>PAN- AAEFP1241Q</a>
+						</li>
 						<!-- <li><a href="#"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li> -->
 						<!-- <li><a href="#"><i class="icon fa-github">&nbsp;</i>Github</a></li> -->
+					</ul>
+
+					<h4>Our Location</h4>
+					<ul class="plain">
+						<li title="location"><a href="#"><i class="icon fa-location-arrow">&nbsp;</i>
+								Vill. Tooran, Amloh Road, Mandi Gobindgarh-147301</a>
+						</li>
 					</ul>
 				</section>
 			</div>
