--- a/products.html
+++ b/products.html
@@ -56,7 +56,7 @@
 											">
 							<h3>TMT saria</h3>
 						</header>
-						<p>We are Steel manufacturing comoany based in Punjab, India</p>
+						<p>High quality TMT Saria</p>
 					</div>
 				</section>
 				<section>
@@ -68,8 +68,7 @@
 											">
 							<h3>Metal Ingots</h3>
 						</header>
-						<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non
-							mi integer non faucibus.</p>
+						<p>High quality Metal Ingots</p>
 					</div>
 				</section>
 				<section>
@@ -81,35 +80,43 @@
 											">
 							<h3>Metal Beam (Gadar)</h3>
 						</header>
-						<p>Nunc lacinia ante nunc ac lobortis ipsum. Interdum adipiscing gravida odio porttitor sem non
-							mi integer non faucibus.</p>
+						<p>High quality Metal Beam (Gadar)</p>
 					</div>
 				</section>
 				<section>
 					<div class="content">
 						<header>
-							<img src="images/channel.jpg" title="Metal channels" style="
+							<img src="images/billets.jpg" title="Metal channels" style="
+												height: 100%;
+												width: 100%;
+											">
+							<h3>Metal Billets</h3>
+						</header>
+						<p>High quality Metal Billets </p>
+					</div>
+				</section>
+				<section>
+					<div class="content">
+						<header>
+							<img src="images/ironrods.jpg" title="Metal Iron Rods" style="
 												height: 100%;
 												width: 100%;
 											">
 							<h3>Metal channels</h3>
 						</header>
-						<p>To download Annual report click above </p>
+						<p>High quality Metal iron Rods</p>
 					</div>
 				</section>
 				<section>
 					<div class="content">
 						<header>
-							<img src="images/scrap.jpg" title="Processing metal scrap" style="
+							<img src="images/scrap.jpg" title="Processing Metal scrap" style="
 												height: 100%;
 												width: 100%;
 											">
-							<h3>Processing metal scrap</h3>
+							<h3>Processing Metal scrap</h3>
 						</header>
-						<p>
-							Nunc lacinia ante nunc ac lobortis ipsum. gravida odio porttiton Nunc lacinia ante nunc ac
-							lobortis ipsum.
-						</p>
+						<p>We process all kinds of Scraps</p>
 					</div>
 				</section>
 			</div>
@@ -130,21 +137,34 @@
 					</p>
 				</section>
 				<section>
-					<h4>Mail us</h4>
+					<h4>Contact Us</h4>
 					<ul class="alt">
-						<li><a href="mailto:xyz@gmail.com">xyz@gmail.com</a></li>
-						<li><a href="mailto:xyz@gmail.com">xyz@gmail.com</a></li>
+						<li><a href="mailto:cpseema@yahoo.co.in">cpseema@yahoo.co.in</a></li>
+						<li><a href="#">98140-26216</a></li>
+						<li><a href="#">01765-500216</a></li>
+						<li><a href="#">01765-254213</a></li>
+						<li><a href="#">01765-258213</a></li>
 						<!-- <li><a href="#">Felis enim feugiat viverra.</a></li>
-							<li><a href="#">Dolor pulvinar magna etiam.</a></li> -->
+								<li><a href="#">Dolor pulvinar magna etiam.</a></li> -->
 					</ul>
 				</section>
 				<section>
-					<h4>Our social media</h4>
+					<h4>Other details</h4>
 					<ul class="plain">
-						<li><a href="#"><i class="icon fa-twitter">&nbsp;</i>Twitter</a></li>
-						<li><a href="#"><i class="icon fa-facebook">&nbsp;</i>Facebook</a></li>
+						<li title="GST no."><a href="#"><i title="GST no." class="icon fa-info-circle">&nbsp;</i>
+								GST- 03AAEFP1241Q1Z9</a>
+						</li>
+						<li title="Pan no."><a href="#"><i class="icon fa-info-circle">&nbsp;</i>PAN- AAEFP1241Q</a>
+						</li>
 						<!-- <li><a href="#"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li> -->
 						<!-- <li><a href="#"><i class="icon fa-github">&nbsp;</i>Github</a></li> -->
+					</ul>
+
+					<h4>Our Location</h4>
+					<ul class="plain">
+						<li title="location"><a href="#"><i class="icon fa-location-arrow">&nbsp;</i>
+								Vill. Tooran, Amloh Road, Mandi Gobindgarh-147301</a>
+						</li>
 					</ul>
 				</section>
 			</div>
@@ -153,7 +173,6 @@
 			</div>
 		</div>
 	</footer>
-
 	<!-- Scripts -->
 	<script src="assets/js/jquery.min.js"></script>
 	<script src="assets/js/browser.min.js"></script>
