--- a/products.html
+++ b/products.html
@@ -43,8 +43,8 @@
 		<div class="inner">
 			<header class="special">
 				<h2>We Manufacture variety of Steel and Iron products</h2>
-				<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer
-					lobortis commodo ornare aliquet accumsan erat tempus amet porttitor.</p>
+				<!-- <p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer
+					lobortis commodo ornare aliquet accumsan erat tempus amet porttitor.</p> -->
 			</header>
 			<div class="highlights">
 				<section>
