--- a/index.html
+++ b/index.html
@@ -133,7 +133,8 @@
 							<div class="image">
 								<img src="images/pic01.png" alt="image" />
 							</div>
-							<p class="credit">- <strong>Mr Rajesh Kumar Mittal</strong> <span>Managing dir.</span></p>
+							<p class="credit">- <strong>Mr Rajesh Kumar Mittal</strong> <span>Managing director</span>
+							</p>
 						</div>
 					</div>
 				</section>
@@ -147,7 +148,8 @@
 							<div class="image">
 								<img src="images/pic02.png" alt="image" />
 							</div>
-							<p class="credit">- <strong>Mr Chander Parkash Mittal</strong> <span>Managing Dir</span></p>
+							<p class="credit">- <strong>Mr Chander Parkash Mittal</strong> <span>Managing
+									Director</span></p>
 						</div>
 					</div>
 				</section>
