--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 							<div class="image">
 								<img src="images/pic01.png" alt="image" />
 							</div>
-							<p class="credit">- <strong>Mr Rajesh Kumar Mittal</strong> <span>Managing director</span>
+							<p class="credit">- <strong>Mr Chander Parkash Mittal</strong> <span>Managing director</span>
 							</p>
 						</div>
 					</div>
@@ -148,7 +148,7 @@
 							<div class="image">
 								<img src="images/pic02.png" alt="image" />
 							</div>
-							<p class="credit">- <strong>Mr Chander Parkash Mittal</strong> <span>Managing
+							<p class="credit">- <strong>Mr Rajesh Kumar Mittal</strong> <span>Managing
 									Director</span></p>
 						</div>
 					</div>
