--- a/products.html
+++ b/products.html
@@ -50,13 +50,13 @@
 				<section>
 					<div class="content">
 						<header>
-							<img src="images/saria.jpg" title="TMT saria" style="
+							<img src="images/saria.jpg" title="TMT Bars" style="
 												height: 100%;
 												width: 100%;
 											">
 							<h3>TMT saria</h3>
 						</header>
-						<p>High quality TMT Saria</p>
+						<p>High quality TMT Bars</p>
 					</div>
 				</section>
 				<section>
@@ -71,7 +71,7 @@
 						<p>High quality Metal Ingots</p>
 					</div>
 				</section>
-				<section>
+				<!-- <section>
 					<div class="content">
 						<header>
 							<img src="images/gadar.jpg" title="Metal Beam (Gadar)" style="
@@ -82,7 +82,7 @@
 						</header>
 						<p>High quality Metal Beam (Gadar)</p>
 					</div>
-				</section>
+				</section> -->
 				<section>
 					<div class="content">
 						<header>
@@ -98,13 +98,13 @@
 				<section>
 					<div class="content">
 						<header>
-							<img src="images/ironrods.jpg" title="Metal Iron Rods" style="
+							<img src="images/ironrods.jpg" title="Metal Iron Rounds" style="
 												height: 100%;
 												width: 100%;
 											">
-							<h3>Metal channels</h3>
+							<h3>Metal Rounds</h3>
 						</header>
-						<p>High quality Metal iron Rods</p>
+						<p>High quality Metal Iron Rounds</p>
 					</div>
 				</section>
 				<section>
