--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<h1>Punjab steels</h1>
 			<p>We Manufacture and Trade in steel and iron products across india</p>
 		</div>
-		<video autoplay loop muted playsinline src="images/banner.mp4"></video>
+		<!-- <video autoplay loop muted playsinline src="images/banner.mp4"></video> -->
 	</section>
 
 	<!-- Highlights -->
@@ -69,8 +69,7 @@
 				<section>
 					<div class="content">
 						<header>
-							<a href="download/publicNotice.pdf"" class=" icon fa-sticky-note"><span
-									class="label">Icon</span></a>
+							<a href="#" class=" icon fa-sticky-note"><span class="label">Icon</span></a>
 							<h3>Public Notice</h3>
 						</header>
 						<p>To download Public Notice click above icon.</p>
@@ -133,7 +132,8 @@
 							<div class="image">
 								<img src="images/pic01.png" alt="image" />
 							</div>
-							<p class="credit">- <strong>Mr Chander Parkash Mittal</strong> <span>Managing director</span>
+							<p class="credit">- <strong>Mr Chander Parkash Mittal</strong> <span>Managing
+									director</span>
 							</p>
 						</div>
 					</div>
