--- a/index.html
+++ b/index.html
@@ -1,159 +1,184 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
+  <head>
+    <title>Punjab steels</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
+    <meta name="description" content="" />
+    <meta name="keywords" content="" />
+    <link rel="icon" type="image/png" href="images/ico.png" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+  </head>
 
-<head>
-	<title>Punjab steels</title>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<meta name="description" content="" />
-	<meta name="keywords" content="" />
-	<link rel="icon" type="image/png" href="images/ico.png">
-	<link rel="stylesheet" href="assets/css/main.css" />
-</head>
+  <body class="is-preload">
+    <!-- Header -->
+    <header id="header">
+      <a class="logo" href="index.html">Punjab Steels</a>
+      <nav>
+        <a href="#menu">Menu</a>
+      </nav>
+    </header>
 
-<body class="is-preload">
+    <!-- Nav -->
+    <nav id="menu">
+      <ul class="links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="products.html">Products</a></li>
+        <li><a href="aboutUs.html">About Us</a></li>
+      </ul>
+    </nav>
 
-	<!-- Header -->
-	<header id="header">
-		<a class="logo" href="index.html">Punjab Steels</a>
-		<nav>
-			<a href="#menu">Menu</a>
-		</nav>
-	</header>
+    <!-- Banner -->
+    <section id="banner">
+      <div class="inner">
+        <h1>Punjab steels</h1>
+        <p>We Manufacture and Trade in steel and iron products across india</p>
+      </div>
+      <!-- <video autoplay loop muted playsinline src="images/banner.mp4"></video> -->
+    </section>
 
-	<!-- Nav -->
-	<nav id="menu">
-		<ul class="links">
-			<li><a href="index.html">Home</a></li>
-			<li><a href="products.html">Products</a></li>
-			<li><a href="aboutUs.html">About Us</a></li>
-		</ul>
-	</nav>
+    <!-- Highlights -->
+    <section class="wrapper">
+      <div class="inner">
+        <header class="special">
+          <h2>Our services and downloads</h2>
+          <p>
+            Please click on Icons below to perform various actions such as
+            download or navigating.
+          </p>
+        </header>
+        <div class="highlights">
+          <section>
+            <div class="content">
+              <header>
+                <a href="aboutUs.html" class="icon fa-vcard-o"
+                  ><span class="label">Icon</span></a
+                >
+                <h3>Company profile</h3>
+              </header>
+              <p>We are Steel manufacturing company based in Punjab, India</p>
+            </div>
+          </section>
 
-	<!-- Banner -->
-	<section id="banner">
-		<div class="inner">
-			<h1>Punjab steels</h1>
-			<p>We Manufacture and Trade in steel and iron products across india</p>
-		</div>
-		<!-- <video autoplay loop muted playsinline src="images/banner.mp4"></video> -->
-	</section>
+          <section>
+            <div class="content">
+              <header>
+                <a href="download/EC.pdf" class="icon fa-floppy-o"
+                  ><span class="label">Icon</span></a
+                >
+                <h3>SEIAA Approval</h3>
+              </header>
+              <p>To download SEIAA Approval reports click above icon.</p>
+            </div>
+          </section>
+          <section>
+            <div class="content">
+              <header>
+                <a href="#" class="icon fa-sticky-note"
+                  ><span class="label">Icon</span></a
+                >
+                <h3>Environment Policy</h3>
+              </header>
+              <p>To download Environment Policy click above icon.</p>
+            </div>
+          </section>
+          <section>
+            <div class="content">
+              <header>
+                <a
+                  href="mailto:cpseema@yahoo.co.in"
+                  class="icon fa-paper-plane-o"
+                  ><span class="label">Icon</span></a
+                >
+                <h3>Send email</h3>
+              </header>
+              <p>
+                For any further query please send us email at
+                <a href="mailto:cpseema@yahoo.co.in"> cpseema@yahoo.co.in</a>
+              </p>
+            </div>
+          </section>
+          <section>
+            <div class="content">
+              <header>
+                <a href="products.html" class="icon fa-product-hunt"
+                  ><span class="label">Icon</span></a
+                >
+                <h3>Our Products</h3>
+              </header>
+              <p>To Navigate to our product list click above icon.</p>
+            </div>
+          </section>
+        </div>
+      </div>
+    </section>
 
-	<!-- Highlights -->
-	<section class="wrapper">
-		<div class="inner">
-			<header class="special">
-				<h2>Our services and downloads</h2>
-				<p>Please click on Icons below to perform various actions such as download or navigating.</p>
-			</header>
-			<div class="highlights">
-				<section>
-					<div class="content">
-						<header>
-							<a href="aboutUs.html" class="icon fa-vcard-o"><span class="label">Icon</span></a>
-							<h3>Company profile</h3>
-						</header>
-						<p>We are Steel manufacturing company based in Punjab, India</p>
-					</div>
-				</section>
+    <!-- CTA -->
+    <section id="cta" class="wrapper">
+      <div class="inner">
+        <h2>Our mission</h2>
+        <p>
+          To attain a leadership position in Steel Industry through performance
+          excellence by providing cost effective metal products. Value creation
+          by means of best management practices, empowered workforce and
+          safeguarding corporate social responsibility
+        </p>
+      </div>
+    </section>
 
-				<section>
-					<div class="content">
-						<header>
-							<a href="download/EC.pdf" class="icon fa-floppy-o"><span class="label">Icon</span></a>
-							<h3>SEIAA Approval</h3>
-						</header>
-						<p>To download SEIAA Approval reports click above icon.</p>
-					</div>
-				</section>
-				<section>
-					<div class="content">
-						<header>
-							<a href="#" class=" icon fa-sticky-note"><span class="label">Icon</span></a>
-							<h3>Public Notice</h3>
-						</header>
-						<p>To download Public Notice click above icon.</p>
-					</div>
-				</section>
-				<section>
-					<div class="content">
-						<header>
-							<a href="mailto:cpseema@yahoo.co.in" class="icon fa-paper-plane-o"><span
-									class="label">Icon</span></a>
-							<h3>Send email</h3>
-						</header>
-						<p>For any further query please send us email at <a href="mailto:cpseema@yahoo.co.in">
-								cpseema@yahoo.co.in</a></p>
-					</div>
-				</section>
-				<section>
-					<div class="content">
-						<header>
-							<a href="products.html" class="icon fa-product-hunt"><span class="label">Icon</span></a>
-							<h3>Our Products</h3>
-						</header>
-						<p>To Navigate to our product list click above icon.</p>
-					</div>
-				</section>
-			</div>
-		</div>
-	</section>
-
-	<!-- CTA -->
-	<section id="cta" class="wrapper">
-		<div class="inner">
-			<h2>Our mission</h2>
-			<p>
-				To attain a leadership position in Steel Industry through performance excellence by providing cost
-				effective metal products.
-				Value creation by means of best management practices, empowered workforce and safeguarding corporate
-				social responsibility
-
-			</p>
-		</div>
-	</section>
-
-	<!-- Testimonials -->
-	<section class="wrapper">
-		<div class="inner">
-			<header class="special">
-				<h2>Our leadership</h2>
-				<p>We are thriving under the leadership of some of the ignited minds and most experienced executives in
-					the industry..</p>
-			</header>
-			<div class="testimonials">
-				<section>
-					<div class="content">
-						<blockquote>
-							<p>We must work closely with local vendor to make india atma-nirbhar and grow at much faster
-								pace along with others</p>
-						</blockquote>
-						<div class="author">
-							<div class="image">
-								<img src="images/pic01.png" alt="image" />
-							</div>
-							<p class="credit">- <strong>Mr Chander Parkash Mittal</strong> <span>Managing
-									director</span>
-							</p>
-						</div>
-					</div>
-				</section>
-				<section>
-					<div class="content">
-						<blockquote>
-							<p>The steel industry is not just about the steelmaking process, but also about people and
-								building cities , states and nation.</p>
-						</blockquote>
-						<div class="author">
-							<div class="image">
-								<img src="images/pic02.png" alt="image" />
-							</div>
-							<p class="credit">- <strong>Mr Rajesh Kumar Mittal</strong> <span>Managing
-									Director</span></p>
-						</div>
-					</div>
-				</section>
-				<!-- <section>
+    <!-- Testimonials -->
+    <section class="wrapper">
+      <div class="inner">
+        <header class="special">
+          <h2>Our leadership</h2>
+          <p>
+            We are thriving under the leadership of some of the ignited minds
+            and most experienced executives in the industry..
+          </p>
+        </header>
+        <div class="testimonials">
+          <section>
+            <div class="content">
+              <blockquote>
+                <p>
+                  We must work closely with local vendor to make india
+                  atma-nirbhar and grow at much faster pace along with others
+                </p>
+              </blockquote>
+              <div class="author">
+                <div class="image">
+                  <img src="images/pic01.png" alt="image" />
+                </div>
+                <p class="credit">
+                  - <strong>Mr Chander Parkash Mittal</strong>
+                  <span>Managing director</span>
+                </p>
+              </div>
+            </div>
+          </section>
+          <section>
+            <div class="content">
+              <blockquote>
+                <p>
+                  The steel industry is not just about the steelmaking process,
+                  but also about people and building cities , states and nation.
+                </p>
+              </blockquote>
+              <div class="author">
+                <div class="image">
+                  <img src="images/pic02.png" alt="image" />
+                </div>
+                <p class="credit">
+                  - <strong>Mr Rajesh Kumar Mittal</strong>
+                  <span>Managing Director</span>
+                </p>
+              </div>
+            </div>
+          </section>
+          <!-- <section>
 							<div class="content">
 								<blockquote>
 									<p>
@@ -168,68 +193,77 @@
 								</div>
 							</div>
 						</section> -->
-			</div>
-		</div>
-	</section>
+        </div>
+      </div>
+    </section>
 
-	<!-- Footer -->
-	<footer id="footer">
-		<div class="inner">
-			<div class="content">
-				<section>
-					<h3>Our Vision</h3>
-					<p>
-						Our vision is to deliver and supply the most noteworthy quality products to our clients
-						utilizing sustainable procedures that meet the most elevated global standards of environmental
-						control. We trust that profoundly talented and motivated employees are the way to accomplishing
-						our goals and we will keep on providing outstanding training and investment in their future.
-					</p>
-				</section>
-				<section>
-					<h4>Contact Us</h4>
-					<ul class="alt">
-						<li><a href="mailto:cpseema@yahoo.co.in">cpseema@yahoo.co.in</a></li>
-						<li><a href="#">98140-26216</a></li>
-						<li><a href="#">01765-500216</a></li>
-						<li><a href="#">01765-254213</a></li>
-						<li><a href="#">01765-258213</a></li>
-						<!-- <li><a href="#">Felis enim feugiat viverra.</a></li>
+    <!-- Footer -->
+    <footer id="footer">
+      <div class="inner">
+        <div class="content">
+          <section>
+            <h3>Our Vision</h3>
+            <p>
+              Our vision is to deliver and supply the most noteworthy quality
+              products to our clients utilizing sustainable procedures that meet
+              the most elevated global standards of environmental control. We
+              trust that profoundly talented and motivated employees are the way
+              to accomplishing our goals and we will keep on providing
+              outstanding training and investment in their future.
+            </p>
+          </section>
+          <section>
+            <h4>Contact Us</h4>
+            <ul class="alt">
+              <li>
+                <a href="mailto:cpseema@yahoo.co.in">cpseema@yahoo.co.in</a>
+              </li>
+              <li><a href="#">98140-26216</a></li>
+              <li><a href="#">01765-500216</a></li>
+              <li><a href="#">01765-254213</a></li>
+              <li><a href="#">01765-258213</a></li>
+              <!-- <li><a href="#">Felis enim feugiat viverra.</a></li>
 								<li><a href="#">Dolor pulvinar magna etiam.</a></li> -->
-					</ul>
-				</section>
-				<section>
-					<h4>Other details</h4>
-					<ul class="plain">
-						<li title="GST no."><a href="#"><i title="GST no." class="icon fa-info-circle">&nbsp;</i>
-								GST- 03AAEFP1241Q1Z9</a>
-						</li>
-						<li title="Pan no."><a href="#"><i class="icon fa-info-circle">&nbsp;</i>PAN- AAEFP1241Q</a>
-						</li>
-						<!-- <li><a href="#"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li> -->
-						<!-- <li><a href="#"><i class="icon fa-github">&nbsp;</i>Github</a></li> -->
-					</ul>
+            </ul>
+          </section>
+          <section>
+            <h4>Other details</h4>
+            <ul class="plain">
+              <li title="GST no.">
+                <a href="#"
+                  ><i title="GST no." class="icon fa-info-circle">&nbsp;</i>
+                  GST- 03AAEFP1241Q1Z9</a
+                >
+              </li>
+              <li title="Pan no.">
+                <a href="#"
+                  ><i class="icon fa-info-circle">&nbsp;</i>PAN- AAEFP1241Q</a
+                >
+              </li>
+              <!-- <li><a href="#"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li> -->
+              <!-- <li><a href="#"><i class="icon fa-github">&nbsp;</i>Github</a></li> -->
+            </ul>
 
-					<h4>Our Location</h4>
-					<ul class="plain">
-						<li title="location"><a href="#"><i class="icon fa-location-arrow">&nbsp;</i>
-								Vill. Tooran, Amloh Road, Mandi Gobindgarh-147301</a>
-						</li>
-					</ul>
-				</section>
-			</div>
-			<div class="copyright">
-				&copy; Punjab Steels
-			</div>
-		</div>
-	</footer>
+            <h4>Our Location</h4>
+            <ul class="plain">
+              <li title="location">
+                <a href="#"
+                  ><i class="icon fa-location-arrow">&nbsp;</i> Vill. Tooran,
+                  Amloh Road, Mandi Gobindgarh-147301</a
+                >
+              </li>
+            </ul>
+          </section>
+        </div>
+        <div class="copyright">&copy; Punjab Steels</div>
+      </div>
+    </footer>
 
-	<!-- Scripts -->
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/browser.min.js"></script>
-	<script src="assets/js/breakpoints.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<script src="assets/js/main.js"></script>
-
-</body>
-
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
