--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
           <section>
             <div class="content">
               <header>
-                <a href="#" class="icon fa-sticky-note"
+                <a
+                  href="download/environmentPolicy.pdf"
+                  class="icon fa-sticky-note"
                   ><span class="label">Icon</span></a
                 >
                 <h3>Environment Policy</h3>
