--- a/aboutUs.html
+++ b/aboutUs.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 
 <html>
 
@@ -8,12 +8,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
-	<link rel="icon" type="image/png" href="images/ico.png">
+	<link rel="icon" type="image/png" href="images/ico.png" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 </head>
 
 <body class="is-preload">
-
 	<!-- Header -->
 	<header id="header">
 		<a class="logo" href="index.html">Punjab Steels</a>
@@ -43,13 +42,93 @@
 				<header>
 					<h2>About Us</h2>
 				</header>
-				<p>Punjab steels started in 2001 in village tooran near Mandi gobindgarh-147301. </p>
-				<p> we are Manufacturers of TMT Bars, rounds, Angle, Channels</p>
+				<p>
+					Punjab steels started in 2001 in village tooran near Mandi
+					gobindgarh-147301.
+				</p>
+				<p>we are Manufacturers of TMT Bars, rounds, Angle, Channels</p>
 				<!-- <hr />
 					<h3>Magna odio tempus commodo</h3>
 					<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor. Ante commodo blandit adipiscing integer semper orci eget. Faucibus commodo adipiscing mi eu nullam accumsan morbi arcu ornare odio mi adipiscing nascetur lacus ac interdum morbi accumsan vis mi accumsan ac praesent.</p>
 					<p>Felis sagittis eget tempus primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Magna sed etiam ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus lorem ipsum dolor sit amet nullam.</p>
 				 -->
+				<!-- </div> -->
+				<header>
+					<h2>Our Managing Directors</h2>
+					<!-- <p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer
+					lobortis commodo ornare aliquet accumsan erat tempus amet porttitor.</p> -->
+				</header>
+				<div class="highlights aboutimg">
+					<section>
+						<div class="content">
+
+							<header>
+								<img src="images/pic01.png" style="height: 100%; width: 100%" />
+								<h3>Mr Chander Parkash Mittal</h3>
+							</header>
+						</div>
+					</section>
+					<section>
+						<div class="content">
+							<header>
+								<img src="images/pic02.png" style="height: 100%; width: 100%" />
+								<h3> Mr Rajesh Kumar Mittal</h3>
+							</header>
+						</div>
+					</section>
+
+				</div>
+				<div class="highlights aboutimg">
+					<section>
+						<div class="content">
+							<header>
+								<img src="images/electricity.jpeg" style="height: 100%; width: 100%" />
+								<h3>Clean energy source</h3>
+							</header>
+						</div>
+					</section>
+					<section>
+						<div class="content">
+							<header>
+								<img src="images/watertreat.jpeg" style="height: 100%; width: 100%" />
+								<h3>Water treatement facility</h3>
+							</header>
+						</div>
+					</section>
+
+					<section>
+						<div class="content">
+							<header>
+								<img src="images/watercool.jpeg" style="height: 100%; width: 100%" />
+								<h3>Sustainable water cooler</h3>
+							</header>
+						</div>
+					</section>
+					<section>
+						<div class="content">
+							<header>
+								<img src="images/1.jpeg" style="height: 100%; width: 100%" />
+								<h3>Factory View</h3>
+							</header>
+						</div>
+					</section>
+					<section>
+						<div class="content">
+							<header>
+								<img src="images/Cleanair.jpg" style="height: 100%; width: 100%" />
+								<h3>Clean treated white smoke</h3>
+							</header>
+						</div>
+					</section>
+					<section>
+						<div class="content">
+							<header>
+								<img src="images/automatic.jpeg" style="height: 100%; width: 100%" />
+								<h3>Automatic assembly</h3>
+							</header>
+						</div>
+					</section>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -61,16 +140,20 @@
 				<section>
 					<h3>Our Vision</h3>
 					<p>
-						Our vision is to deliver and supply the most noteworthy quality products to our clients
-						utilizing sustainable procedures that meet the most elevated global standards of environmental
-						control. We trust that profoundly talented and motivated employees are the way to accomplishing
-						our goals and we will keep on providing outstanding training and investment in their future.
+						Our vision is to deliver and supply the most noteworthy quality
+						products to our clients utilizing sustainable procedures that meet
+						the most elevated global standards of environmental control. We
+						trust that profoundly talented and motivated employees are the way
+						to accomplishing our goals and we will keep on providing
+						outstanding training and investment in their future.
 					</p>
 				</section>
 				<section>
 					<h4>Contact Us</h4>
 					<ul class="alt">
-						<li><a href="mailto:cpseema@yahoo.co.in">cpseema@yahoo.co.in</a></li>
+						<li>
+							<a href="mailto:cpseema@yahoo.co.in">cpseema@yahoo.co.in</a>
+						</li>
 						<li><a href="#">98140-26216</a></li>
 						<li><a href="#">01765-500216</a></li>
 						<li><a href="#">01765-254213</a></li>
@@ -82,10 +165,12 @@
 				<section>
 					<h4>Other details</h4>
 					<ul class="plain">
-						<li title="GST no."><a href="#"><i title="GST no." class="icon fa-info-circle">&nbsp;</i>
+						<li title="GST no.">
+							<a href="#"><i title="GST no." class="icon fa-info-circle">&nbsp;</i>
 								GST- 03AAEFP1241Q1Z9</a>
 						</li>
-						<li title="Pan no."><a href="#"><i class="icon fa-info-circle">&nbsp;</i>PAN- AAEFP1241Q</a>
+						<li title="Pan no.">
+							<a href="#"><i class="icon fa-info-circle">&nbsp;</i>PAN- AAEFP1241Q</a>
 						</li>
 						<!-- <li><a href="#"><i class="icon fa-instagram">&nbsp;</i>Instagram</a></li> -->
 						<!-- <li><a href="#"><i class="icon fa-github">&nbsp;</i>Github</a></li> -->
@@ -93,15 +178,14 @@
 
 					<h4>Our Location</h4>
 					<ul class="plain">
-						<li title="location"><a href="#"><i class="icon fa-location-arrow">&nbsp;</i>
-								Vill. Tooran, Amloh Road, Mandi Gobindgarh-147301</a>
+						<li title="location">
+							<a href="#"><i class="icon fa-location-arrow">&nbsp;</i> Vill. Tooran,
+								Amloh Road, Mandi Gobindgarh-147301</a>
 						</li>
 					</ul>
 				</section>
 			</div>
-			<div class="copyright">
-				&copy; Punjab Steels
-			</div>
+			<div class="copyright">&copy; Punjab Steels</div>
 		</div>
 	</footer>
 
@@ -111,7 +195,6 @@
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
-
 </body>
 
 </html>
