--- a/aboutUs.html
+++ b/aboutUs.html
@@ -78,6 +78,11 @@
 					</section>
 
 				</div>
+				<header>
+					<h2>Picture Gallery</h2>
+					<!-- <p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer
+					lobortis commodo ornare aliquet accumsan erat tempus amet porttitor.</p> -->
+				</header>
 				<div class="highlights aboutimg">
 					<section>
 						<div class="content">
